--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -11,20 +11,23 @@
         </nav>
       </div>
     </div>
-    {% assign matches = site.matches %}
-    {% for match in matches %}
-    {% if match.status == "next match" %}
+    {% assign matches = site.matches | group_by: "status" %}
+    {% for match in matches limit:1 %}
     <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
         <div class="col">
           <div class="card bg-transparent text-white border-0">
             <div class="card-body py-3">
-              <h1 class="text-uppercase fw-bolder pb-5">next match</h1>
+              <h1 class="text-uppercase fw-bolder pb-5">{{ match.status }}</h1>
               <p class="card-text fw-bolder mb-0"><small class="text-uppercase">{{ match.type }}</small> • <small class="text-uppercase">{{ match.competition }}</small></p>
               <p class="card-text text-secondary"><small class="text-uppercase">{{ match.date | date: "%d %B %Y • %R" | append: " WIB" }}</small></p>
               <div class="row row-cols-3 text-center py-5">
                 <div class="col"><span class="fw-bold text-uppercase">{{ match.home }}</span></div>
+                {% if match.status == "next match" %}
                 <div class="col"><span class="fw-bold text-uppercase">vs</span></div>
+                  {% else %}
+                <div class="col"><span class="fw-bold text-uppercase">{{ match.result }}</span></div>
+                {% endif %}
                 <div class="col"><span class="fw-bold text-uppercase">{{ match.away }}</span></div>
               </div>
               <p class="card-text text-capitalize">{{ match.place }}</p>
@@ -33,7 +36,6 @@
         </div>
       </div>
     </div>
-    {% endif %}
     {% endfor %}
   </div>
 </header>
