--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     {% assign matches = site.matches | group_by: "status" %}
-    {% for match in matches limit:1 %}
+    {% for match in matches reversed %}
     <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
         <div class="col">
