--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -14,7 +14,7 @@
     {% assign matches = site.matches %}
     <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
-        {% for match in matches reversed %}
+        {% for match in matches reversed limit:1 %}
         <div class="col">
           <div class="card bg-transparent text-white border-0">
             <div class="card-body py-3">
