--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -11,11 +11,10 @@
         </nav>
       </div>
     </div>
-    {% assign matches = site.matches %}
+    {% assign matches = site.matches | sort: "status, last match" %}
     <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
-        {% for match in matches limit:1 %}
-        {% if match.status == "next match" %}
+        {% for match in matches limit:1 reversed %}
         <div class="col">
           <div class="card bg-transparent text-white border-0">
             <div class="card-body py-3">
@@ -35,7 +34,6 @@
             </div> 
           </div>
         </div>
-        {% endif %}
         {% endfor %}
       </div>
     </div>
