--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -11,10 +11,10 @@
         </nav>
       </div>
     </div>
-    {% assign matches = site.matches | sort: "status, last match" %}
+    {% assign matches = site.matches | sort: "status, last match" | reverse %}
     <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
-        {% for match in matches limit:1 reversed %}
+        {% for match in matches limit:1 %}
         <div class="col">
           <div class="card bg-transparent text-white border-0">
             <div class="card-body py-3">
