--- a/_includes/sponsor.html
+++ b/_includes/sponsor.html
@@ -1,15 +1,15 @@
 <div class="bg-light">
   <div class="container-sm py-5">
     <div class="text-center fw-bolder text-uppercase pb-3"><small>our sponsor</small></div>
-    <div class="row row-cols-3" style="height: 100px;">
+    <div class="row row-cols-3">
       <div class="col">
-        <img src="{{ 'assets/img/POK.png' | relative_url }}" class="img-fluid">
+        <img src="{{ 'assets/img/POK.png' | relative_url }}" class="img-fluid" height="50">
       </div>
       <div class="col">
-        <img src="{{ 'assets/img/yeni-sembako.png' | relative_url }}" class="img-fluid">
+        <img src="{{ 'assets/img/yeni-sembako.png' | relative_url }}" class="img-fluid" height="50">
       </div>
       <div class="col">
-        <img src="{{ 'assets/img/redline.png' | relative_url }}" class="img-fluid">
+        <img src="{{ 'assets/img/redline.png' | relative_url }}" class="img-fluid" height="50">
       </div>
     </div>
   </div>
