--- a/_includes/sponsor.html
+++ b/_includes/sponsor.html
@@ -3,13 +3,13 @@
     <div class="text-center fw-bolder text-uppercase pb-3"><small>our sponsor</small></div>
     <div class="row row-cols-3">
       <div class="col" height="50px">
-        <img src="{{ 'assets/img/POK.png' | relative_url }}" class="img-fluid">
+        <img src="{{ 'assets/img/POK.png' | relative_url }}" class="">
       </div>
       <div class="col" height="50px">
-        <img src="{{ 'assets/img/yeni-sembako.png' | relative_url }}" class="img-fluid">
+        <img src="{{ 'assets/img/yeni-sembako.png' | relative_url }}" class="">
       </div>
       <div class="col" height="50px">
-        <img src="{{ 'assets/img/redline.png' | relative_url }}" class="img-fluid">
+        <img src="{{ 'assets/img/redline.png' | relative_url }}" class="">
       </div>
     </div>
   </div>
