--- a/_includes/sponsor.html
+++ b/_includes/sponsor.html
@@ -2,13 +2,13 @@
   <div class="container-sm py-5">
     <div class="text-center fw-bolder text-uppercase pb-3"><small>our sponsor</small></div>
     <div class="row row-cols-3">
-      <div class="col" height="50px">
+      <div class="col" height="50">
         <img src="{{ 'assets/img/POK.png' | relative_url }}" class="">
       </div>
-      <div class="col" height="50px">
+      <div class="col" height="50">
         <img src="{{ 'assets/img/yeni-sembako.png' | relative_url }}" class="">
       </div>
-      <div class="col" height="50px">
+      <div class="col" height="50">
         <img src="{{ 'assets/img/redline.png' | relative_url }}" class="">
       </div>
     </div>
