--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     {% assign matches = site.matches | sort: "status, last match" | reverse %}
-    <div class="container-sm h-75 d-flex flex-column justify-content-center text-center" style="backdrop-filter: blur(5px);">
+    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center" style="backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px);">
       <div class="row row-cols-1">
         {% for match in matches limit:1 %}
         <div class="col">
