--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -1,4 +1,4 @@
-<header>
+<header style="backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px);">
   <div class="text-white bg-dark" style="height: 680px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
@@ -12,7 +12,7 @@
       </div>
     </div>
     {% assign matches = site.matches | sort: "status, last match" | reverse %}
-    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center" style="backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px);">
+    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center">
       <div class="row row-cols-1">
         {% for match in matches limit:1 %}
         <div class="col">
