--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -3,7 +3,10 @@
   <div class="h-100" style="backdrop-filter: blur(1px); -webkit-backdrop-filter: blur(1px);">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-        <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">{{ site.title }}</a>
+        <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">
+          <img src="{{ /assets/img/logo-1-new.svg" alt="" width="30" height="24">
+          {{ site.title }}
+        </a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
           {% assign currentPage = page.url %}
           <a {% if currentPage == '/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 text-white" {% endif %} href="/">Home</a>
