--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -4,7 +4,7 @@
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">
-          <img src="{{ assets/img/logo-1-new.svg }}" alt="" class="rounded-circle" width="30" height="24">
+          <img src="{{ /assets/img/logo-1-new.svg relative_url }}" alt="" class="rounded-circle pe-3" width="30" height="30">
           {{ site.title }}
         </a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
