--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -1,8 +1,11 @@
 <header>
-  <div class="text-white" style="height: 680px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+  <div class="text-white" style="height: 720px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-        <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">{{ site.title }}</a>
+        <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">
+          <img src="{{ '/assets/img/logo-2-new.svg' | relative_url }}" alt="" class="border-0 pe-2" width="35" height="35">
+          {{ site.title }}
+        </a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
           {% assign currentPage = page.url %}
           <a {% if currentPage == '/' %} class="nav-link px-2 link-secondary" {% else %} class="nav-link px-2 text-white" {% endif %} href="/">Home</a>
