--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -17,7 +17,7 @@
     <div class="container-sm h-100 d-flex flex-column justify-content-center text-center">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card text-white">
+          <div class="card text-white bg-transparent">
             <div class="card-body">
               <h1 class="text-uppercase fw-bolder">{{ page.status }}</h1>
               <p class="text-uppercase fw-bolder mb-0">{{ page.type }} • {{ page.competition }}</p>
