--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -1,5 +1,5 @@
 <header class="text-white" style="height: 720px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-  <div>
+  <div class="h-100">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">
@@ -18,13 +18,13 @@
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent">
-            <div class="card-body">
+            <div class="card-body py-5">
               <h1 class="text-uppercase fw-bolder">{{ page.status }}</h1>
               <p class="text-uppercase fw-bolder mb-0">{{ page.type }} • {{ page.competition }}</p>
               <p class="text-uppercase">{{ page.date | date: "%A, %d %B %Y • %R" | append: " WIB" }}</p>
               <div class="row row-cols-3 text-center">
                 <div class="col">
-                  <img src="{{ page.home.logo | relative_url }}" alt="" class="d-block mx-auto border-0 pb-2" width="75" height="75">
+                  <img src="{{ page.home.logo | relative_url }}" alt="" class="d-block mx-auto border-0 rounded-circle pb-2" width="75" height="75">
                   <span class="fw-bold text-uppercase">
                     {{ page.home.name }}
                   </span>
@@ -35,7 +35,7 @@
                 <div class="col"><span class="text-uppercase fw-bolder">{{ page.result }}</span></div>
                 {% endif %}
                 <div class="col">
-                  <img src="{{ page.away.logo | relative_url }}" alt="" class="d-block mx-auto border-0 pb-2" width="75" height="75">
+                  <img src="{{ page.away.logo | relative_url }}" alt="" class="d-block mx-auto border-0 rounded-circle pb-2" width="75" height="75">
                   <span class="fw-bold text-uppercase">
                     {{ page.away.name }}
                   </span>
