--- a/_includes/header-matches.html
+++ b/_includes/header-matches.html
@@ -3,7 +3,7 @@
   <div class="h-100" style="backdrop-filter: blur(1px); -webkit-backdrop-filter: blur(3px);">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-        <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold">
+        <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold text-uppercase">
           <img src="{{ '/assets/img/logo-2-new.svg' | relative_url }}" alt="" class="border-0 pe-2" width="35" height="35">
           {{ site.title }}
         </a>
