--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -1,4 +1,4 @@
-<header class="text-white" style="height: 720px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<header class="text-white" style="height: 720px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
   <div class="h-100">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
@@ -14,15 +14,15 @@
         </nav>
       </div>
     </div>
-    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center">
+    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent">
             <div class="card-body py-5">
               <h1 class="text-uppercase fw-bolder">{{ page.status }}</h1>
-              <p class="text-uppercase fw-bolder mb-0">{{ page.type }} • {{ page.competition }}</p>
-              <p class="text-uppercase">{{ page.kickoff }}</p>
-              <div class="row row-cols-3 text-center">
+              <p class="text-uppercase fw-bolder mb-0"><small>{{ page.type }} • {{ page.competition }}</small></p>
+              <p class="text-uppercase"><small>{{ page.kickoff }}</small></p>
+              <div class="row row-cols-3 text-center py-5">
                 <div class="col">
                   <img src="{{ page.home.logo | relative_url }}" alt="" class="d-block mx-auto border-0 rounded-circle pb-2" width="75" height="75">
                   <span class="fw-bold text-uppercase">
