--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -19,7 +19,7 @@
         <div class="col">
           <div class="card text-white bg-transparent">
             <div class="card-body py-5">
-              <h1 class="text-uppercase fw-bolder">{{ page.status }}</h1>
+              <h1 class="text-uppercase fw-bolder pb-5">{{ page.status }}</h1>
               <p class="text-uppercase fw-bolder mb-0"><small>{{ page.type }} • {{ page.competition }}</small></p>
               <p class="text-uppercase"><small>{{ page.kickoff }}</small></p>
               <div class="row row-cols-3 text-center py-5">
