--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -14,11 +14,11 @@
         </nav>
       </div>
     </div>
-    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
+    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center">
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent">
-            <div class="card-body py-5">
+            <div class="card-body">
               <h1 class="text-uppercase fw-bolder pb-5">{{ page.status }}</h1>
               <p class="text-uppercase fw-bolder mb-0"><small>{{ page.type }} • {{ page.competition }}</small></p>
               <p class="text-uppercase"><small>{{ page.kickoff }}</small></p>
