--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -14,7 +14,7 @@
         </nav>
       </div>
     </div>
-    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center mb-5">
+    <div class="container-sm h-100 d-flex flex-column justify-content-center text-center pb-5">
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent">
