--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -3,6 +3,13 @@ layout: default
 header: header-match
 ---
 
+{% if page.lineup %}
+<div>
+  <p>{{ page.lineup.name }}</p>
+  <p>{{ page.lineup.no-punggung }}</p>
+</div>
+{% endif %}
+
 <div>
   {{ content }}
 </div>
