--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -3,10 +3,10 @@ layout: default
 header: header-match
 ---
 
-{% if page.lineup %}
+{% if page.subs %}
 <div>
-  <p>{{ page.lineup.name }}</p>
-  <p>{{ page.lineup.no-punggung }}</p>
+  <p>{{ page.subs.name }}</p>
+  <p>{{ page.subs.no-punggung }}</p>
 </div>
 {% endif %}
 
