--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -5,8 +5,8 @@ header: header-match
 
 {% if page.subs %}
 <div>
-  <p>{{ page.subs.name }}</p>
-  <p>{{ page.subs.no-punggung }}</p>
+  <p>{{ page.subs.player.name }}</p>
+  <p>{{ page.subs.player.no-punggung }}</p>
 </div>
 {% endif %}
 
