--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -4,11 +4,25 @@ header: header-match
 ---
 
 {% if page.lineup %}
-<div>
-  {% for player in page.lineup %}
-  <p>{{ player.name }}</p>
-  <p>{{ player.no-punggung }}</p>
-  {% endfor %}
+<div class="text-white bg-dark" style="height: 720px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)), url('{{ page.lineup.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+  <div class="h-100">
+    <div class="container bg-transparent">
+      <div class="row row-cols-1">
+        <div class="col">
+          <div class="card">
+            {% for player in page.lineup %}
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <span>{{ player.no-punggung }}</span>
+                <span>{{ player.name }}</span>
+              </li>
+            </ul>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endif %}
 
