--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -4,20 +4,33 @@ header: header-match
 ---
 
 {% if page.lineup %}
-<div class="text-white bg-dark" style="height: 720px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)), url('{{ page.lineup.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<div class="text-white bg-dark" style="background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)), url('{{ page.lineup.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
   <div class="h-100">
     <div class="container bg-transparent">
       <div class="row row-cols-1">
+        <h6 class="text-uppercase">lineup</h6>
         <div class="col">
           <div class="card">
             {% for player in page.lineup %}
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
-                <span>{{ player.no-punggung }}</span>
-                <span>{{ player.name }}</span>
+                <span class="fs-3 fw-bolder text-uppercase">{{ player.no-punggung }}</span>
+                <span class="fs-4 text-uppercase ps-3">{{ player.name }}</span>
               </li>
             </ul>
             {% endfor %}
+            {% if page.subs %}
+            <div class="card-body d-flex">
+              <div class="flex-flex-shrink-0">
+                <span class="fw-bolder text-uppercase">subs</span>
+              </div>
+              <div class="flex-grow-1 ps-3">
+              {% for player in page.subs %}
+                <span class="fs-5 fw-bold text-uppercase pe-2">{{ player.name }}</span>
+              {% endfor %}
+              </div>
+            </div>
+            {% endif %}
           </div>
         </div>
       </div>
