--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -17,8 +17,8 @@ header: header-match
               <ul class="list-group list-group-flush">
                 {% for player in page.lineup %}
                 <li class="list-group-item row text-white bg-transparent border-0">
-                  <div class="col fs-4 fw-bolder text-uppercase text-end text-secondary ps-3">{{ player.no-punggung }}</div>
-                  <div class="col fs-4 fw-bolder text-uppercase">{{ player.name }}</div>
+                  <span class="col fs-4 fw-bolder text-uppercase text-end text-secondary ps-3">{{ player.no-punggung }}</span>
+                  <span class="col fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
                 </li>
                 {% endfor %}
               </ul>
