--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -6,19 +6,19 @@ header: header-match
 {% if page.lineup %}
 <div class="text-white bg-dark" style="background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
   <div class="h-100">
-    <div class="container-sm bg-transparent py-5">
+    <div class="container-sm bg-transparent">
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent rounded-0">
             <div class="card-header">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
             </div>
-            <div class="py-5">
+            <div class="py-3">
               <ul class="list-group list-group-flush">
                 {% for player in page.lineup %}
-                <li class="list-group-item row text-white bg-transparent border-0">
-                  <span class="col fs-4 fw-bolder text-uppercase text-end text-secondary ps-3">{{ player.no-punggung }}</span>
-                  <span class="col fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
+                <li class="list-group-item text-white bg-transparent border-0">
+                  <span class="d-inline-block fs-4 fw-bolder text-uppercase text-end text-secondary ps-3">{{ player.no-punggung }}</span>
+                  <span class="d-inline-block fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
                 </li>
                 {% endfor %}
               </ul>
