--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -4,9 +4,9 @@ header: header-match
 ---
 
 {% if page.lineup %}
-<div class="text-white bg-dark" style="background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<div class="text-white bg-dark" style="background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)), url('{{ page.lineup.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
   <div class="h-100">
-    <div class="container-sm bg-transparent">
+    <div class="container-sm bg-transparent py-3">
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent rounded-0">
@@ -17,8 +17,8 @@ header: header-match
               <ul class="list-group list-group-flush">
                 {% for player in page.lineup %}
                 <li class="list-group-item text-white bg-transparent border-0">
-                  <span class="d-inline-block fs-4 fw-bolder text-uppercase text-end text-secondary ps-3">{{ player.no-punggung }}</span>
-                  <span class="d-inline-block fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
+                  <span class="d-block fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
+                  <span class="d-block fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
                 </li>
                 {% endfor %}
               </ul>
