--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -13,13 +13,15 @@ header: header-match
             <div class="card-header">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
             </div>
-            <div class="py-3">
-              <ul class="list-group list-group-flush">
+            <div class="py-3 text-white bg-transparent">
+              <div class="row">
                 {% for player in page.lineup %}
-                <li class="list-group-item text-white bg-transparent border-0 py-1">
+                <div class="col">
                   <span class="fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
+                </div>
+                <div class="col"
                   <span class="fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
-                </li>
+                </div>
                 {% endfor %}
               </ul>
             </div>
