--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -19,7 +19,7 @@ header: header-match
                 <div class="col">
                   <span class="fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
                 </div>
-                <div class="col"
+                <div class="col">
                   <span class="fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
                 </div>
                 {% endfor %}
