--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -16,12 +16,8 @@ header: header-match
             <div class="py-3 text-white bg-transparent">
               <div class="row">
                 {% for player in page.lineup %}
-                <div class="col">
-                  <span class="fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
-                </div>
-                <div class="col">
-                  <span class="fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
-                </div>
+                <span class="col fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
+                <span class="col fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
                 {% endfor %}
               </ul>
             </div>
