--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -14,7 +14,7 @@ header: header-match
               <h1 class="fw-bolder text-uppercase">lineup</h1>
             </div>
             <div class="py-3 text-white bg-transparent">
-              <div class="row">
+              <div class="row row-cols-2">
                 {% for player in page.lineup %}
                 <span class="col fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
                 <span class="col fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
