--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -16,10 +16,10 @@ header: header-match
             <div class="py-3 text-white bg-transparent">
               <div class="row row-cols-2">
                 {% for player in page.lineup %}
-                <div class="col">
+                <div class="col-3">
                   <span class="fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
                 </div>
-                <div class="col">
+                <div class="col-9">
                   <span class="fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
                 </div>
                 {% endfor %}
