--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -13,15 +13,11 @@ header: header-match
             <div class="card-header">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
             </div>
-            <div class="py-3 text-white bg-transparent">
+            <div class="container-sm py-3 text-white bg-transparent">
               <div class="row row-cols-2">
                 {% for player in page.lineup %}
-                <div class="col-3">
-                  <span class="fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
-                </div>
-                <div class="col-9">
-                  <span class="fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
-                </div>
+                  <span class="col-auto fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
+                  <span class="col-auto fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
                 {% endfor %}
               </ul>
             </div>
