--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -16,8 +16,8 @@ header: header-match
             <div class="container-sm py-3 text-white bg-transparent">
               <div class="row row-cols-2">
                 {% for player in page.lineup %}
-                  <span class="col-auto fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
-                  <span class="col-auto fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
+                  <span class="col fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
+                  <span class="col fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
                 {% endfor %}
               </ul>
             </div>
