--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -13,7 +13,7 @@ header: header-match
             <div class="card-header">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
             </div>
-            <div class="container-sm py-3 text-white bg-transparent">
+            <div class="py-3 text-white bg-transparent">
               <div class="row row-cols-2">
                 {% for player in page.lineup %}
                   <span class="col fs-4 fw-bolder text-uppercase text-end text-secondary pe-3">{{ player.no-punggung }}</span>
