--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -11,13 +11,13 @@ header: header-match
         <div class="col">
           <div class="card text-white bg-transparent rounded-0">
             <div class="card-header">
-              <h1 class="fw-bolder text-uppercase">lineup</h1>
+              <h1 class="fw-bolder text-uppercase text-secondary">lineup</h1>
             </div>
-            <div class="py-3 text-white bg-transparent">
+            <div class="py-5 text-white bg-transparent">
               <div class="row row-cols-2">
                 {% for player in page.lineup %}
-                  <span class="col-2 fs-4 fw-bolder text-uppercase text-end text-secondary pe-2">{{ player.no-punggung }}</span>
-                  <span class="col-10 fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
+                <span class="col-2 fs-4 fw-bolder text-uppercase text-end text-secondary pe-2">{{ player.no-punggung }}</span>
+                <span class="col-10 fs-4 fw-bolder text-uppercase">{{ player.name }}</span>
                 {% endfor %}
               </ul>
             </div>
