--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -12,6 +12,11 @@ header: header-match
           <div class="card text-white bg-transparent rounded-0">
             <div class="card-header">
               <h1 class="fw-bolder text-uppercase text-secondary">lineup</h1>
+              <div class="mx-auto">
+                <img src="{{ page.home.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="50" height="50">
+                <span>vs</span>
+                <img src="{{ page.away.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="50" height="50">
+              </div>
             </div>
             <div class="py-5 text-white bg-transparent">
               <div class="row row-cols-2">
