--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -10,11 +10,11 @@ header: header-match
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent rounded-0">
-            <div class="card-header">
+            <div class="card-header d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase text-secondary">lineup</h1>
-              <div class="mx-auto">
+              <div>
                 <img src="{{ page.home.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="50" height="50">
-                <span>vs</span>
+                <span class="text-uppercase fw-bolder"> vs </span>
                 <img src="{{ page.away.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="50" height="50">
               </div>
             </div>
