--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -13,9 +13,9 @@ header: header-match
             <div class="card-header d-flex justify-content-between">
               <h1 class="fw-bolder text-uppercase text-secondary">lineup</h1>
               <div>
-                <img src="{{ page.home.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="50" height="50">
-                <span class="text-uppercase fw-bolder"> vs </span>
-                <img src="{{ page.away.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="50" height="50">
+                <img src="{{ page.home.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="35" height="35">
+                <span class="text-uppercase fw-bolder px-2">vs</span>
+                <img src="{{ page.away.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="35" height="35">
               </div>
             </div>
             <div class="py-5 text-white bg-transparent">
