--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -11,14 +11,14 @@ header: header-match
         <div class="col">
           <div class="card text-white bg-transparent rounded-0">
             <div class="card-header d-flex justify-content-between">
-              <h1 class="fw-bolder text-uppercase text-secondary">lineup</h1>
+              <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div>
                 <img src="{{ page.home.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="45" height="45">
                 <span class="text-uppercase fw-bolder px-2">vs</span>
                 <img src="{{ page.away.logo | relative_url }}" alt="" class="border-0 rounded-circle" width="45" height="45">
               </div>
             </div>
-            <div class="py-3 text-white bg-transparent">
+            <div class="pt-5 pb-3 text-white bg-transparent">
               <div class="row row-cols-2">
                 {% for player in page.lineup %}
                 <span class="col-2 fs-4 fw-bolder text-uppercase text-end text-secondary pe-2">{{ player.no-punggung }}</span>
