--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -21,7 +21,7 @@
             <div class="card-body">
               <h1 class="text-uppercase fw-bolder pb-5">{{ page.status }}</h1>
               <p class="text-uppercase fw-bolder mb-0"><small>{{ page.type }} • {{ page.competition }}</small></p>
-              <p class="text-uppercase"><small>{{ page.kickoff }}</small></p>
+              <p class="text-uppercase text-secondary"><small>{{ page.kickoff }}</small></p>
               <div class="row row-cols-3 text-center py-5">
                 <div class="col">
                   <img src="{{ page.home.logo | relative_url }}" alt="" class="d-block mx-auto border-0 rounded-circle pb-2" width="75" height="75">
