--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -29,7 +29,7 @@ header: header-match
             {% if page.subs %}
             <div class="card-body d-flex">
               <div class="flex-flex-shrink-0">
-                <span class="fs-6 fw-bolder text-uppercase text-secondary">subs:</span>
+                <span class="fs-6 fw-bolder text-uppercase">subs:</span>
               </div>
               <div class="flex-grow-1 ps-3">
               {% for player in page.subs %}
